style: fix on layout alignment, adjusting page icon and title.

--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,5 @@ body {
 .task-list {
   width: 100%;
   height: 80%;
+  align-items: center;
 }
